project first commit - 피드 메인페이지 css (웹, 모바일 완성)

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
+  <style>
+  @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+  body{margin:0 !important;}a, button,ul{all:unset;}p{margin:0}* { font-family: 'Spoqa Han Sans Neo', 'sans-serif'; }
+</style>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
