main page 완성 (infinite-loading 제외)

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <style>
   @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
-  body{margin:0 !important;}a, button,ul{all:unset;}p{margin:0}* { font-family: 'Spoqa Han Sans Neo', 'sans-serif'; }
+  body{margin:0 !important;}a, button,ul{all:unset;}button{cursor: pointer;}p{margin:0}* { font-family: 'Spoqa Han Sans Neo', 'sans-serif'; }
 </style>
   <body>
     <noscript>
