--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,32 @@
   </head>
   <style>
   @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
-  body{margin:0 !important;}a, button,ul{all:unset;}button{cursor: pointer;}p{margin:0}* { font-family: 'Spoqa Han Sans Neo', 'sans-serif'; }
+  body{
+    margin:0 !important;
+  }
+  a, button,ul{
+    all:unset;
+  }
+  button{
+    margin: 0;
+    padding: 0;
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    line-height: inherit;
+    outline-style:none;
+    box-shadow:none;
+    border-color:transparent;
+    background-color: transparent;
+    border-radius: 0;
+    cursor: pointer;
+  }
+  p{
+    margin:0
+  }
+  * { 
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif'; 
+  }
 </style>
   <body>
     <noscript>
