--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     font-family: 'Spoqa Han Sans Neo', 'sans-serif'; 
   }
 </style>
-  <body>
+  <body oncontextmenu='return false' ondragstart='return false' onselectstart='return false'>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
